[tool.poetry]
name = "stages-cycling"
version = "1.0.0"
description = "Python Toolkit for Stages Cycle Data"
authors = ["S. Co1 <sco1.git@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sco1/stages-cycling"
repository = "https://github.com/sco1/stages-cycling"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"
pandas = "^1.0"
typer = "^0.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0"}
flake8-annotations = "^2.0"
flake8-bugbear = "^20.1"
flake8-docstrings = "^1.5"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.0"
flake8-todo = "^0.7"
pep8-naming = "^0.10"
pre-commit = "^2.3"
pytest = "^5.3"
pytest-check = "^0.3"
pytest-cov = "^2.8"
pytest-mock = "^3.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
